#2. Sealed classes